Updated header and fixed admin auth routes

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -52,7 +52,7 @@
 
     <!-- Logout button on the right -->
     <div class="ms-auto">
-      <form action="/adminAuth/google/logout" method="POST">
+      <form action="/adminAuth/logout" method="POST">
         <button type="submit" class="btn btn-outline-danger btn-sm">
           <i class="bi bi-box-arrow-right"></i> Logout
         </button>
