--- a/views/partials/user/header.hbs
+++ b/views/partials/user/header.hbs
@@ -11,10 +11,10 @@
 
       <div class="collapse navbar-collapse" id="navMenu">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Men</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Women</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Kids</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Sports</a></li>
+          <li class="nav-item"><a class="nav-link" href="/products/men">Men</a></li>
+          <li class="nav-item"><a class="nav-link" href="/products/women">Women</a></li>
+          <li class="nav-item"><a class="nav-link" href="/products/kids">Kids</a></li>
+          <li class="nav-item"><a class="nav-link" href="/products/sports">Sports</a></li>
         </ul>
 
 
