--- a/views/user/addAddress.hbs
+++ b/views/user/addAddress.hbs
@@ -7,6 +7,7 @@
     <div id="formAlert" class="alert d-none" role="alert"></div>
 
     <form id="addAddressForm" autocomplete="off">
+        <input type="hidden" name="from" value="{{from}}">
       <div class="row g-2">
         <div class="col-md-6">
           <label class="form-label small">Name*</label>
