--- a/views/user/allProductsPage.hbs
+++ b/views/user/allProductsPage.hbs
@@ -84,7 +84,7 @@
       </div>
 
 
-      <button class="btn btn-primary w-100" id="applyFilter">Apply Filters</button>
+      <button class="btn btn-primary w-100" id="applyFilter"style="background:#de8024">Apply Filters</button>
     </div>
 
 
@@ -142,3 +142,4 @@
 </div>
 
  <script src="/js/user/products.js"></script>
+   <script src="/js/user/wishlist.js"></script>
