--- a/views/user/editAddress.hbs
+++ b/views/user/editAddress.hbs
@@ -8,7 +8,8 @@
 
 <form id="editAddressForm" autocomplete="off" data-id="{{address._id}}" data-from="{{query.from}}">
       <input type="hidden" id="addressId" value="{{address._id}}">
-  <input type="hidden" name="from" id="fromPage" value="{{query.from}}">
+<input type="hidden" name="from" id="fromPage" value="{{from}}">
+
 
       <div class="row g-2">
         <div class="col-md-6">
