--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -15,7 +15,7 @@
           <a href="/wishlist" class="list-group-item border-0 list-group-item-action">Wishlist</a>
           <a href="/wallet" class="list-group-item border-0 list-group-item-action">Wallet</a>
           <a href="/coupons" class="list-group-item border-0 list-group-item-action">Coupons</a>
-          <a href="/logout" class="list-group-item border-0 list-group-item-action text-danger fw-semibold">Logout</a>
+          <a href="/auth/logout" class="list-group-item border-0 list-group-item-action text-danger fw-semibold">Logout</a>
         </div>
       </div>
       <!-- Referral Code -->
