--- a/views/admin/editOffer.hbs
+++ b/views/admin/editOffer.hbs
@@ -3,7 +3,22 @@
 
 <div class="container-fluid">
   <div class="row">
-    {{> adminSidebar}}
+       <!-- Sidebar -->
+     <div class="col-2 sidebar">
+        <h4 class="mb-4 text-danger">KICKSTYLE</h4>
+  <a href="/admin/dashboard" class="btn btn-danger w-100 mb-2">Dashboard</a>
+  <a href="/admin/order-management" class="btn btn-danger w-100 mb-2 ">Orders</a>
+  <a href="/admin/product-management" class="btn btn-danger w-100 mb-2 ">Products</a>
+  <a href="/admin/sales-report" class="btn btn-danger w-100 mb-2">Sales Report</a>
+  <a href="/admin/user-management" class="btn btn-danger w-100 mb-2">Customers</a>
+  <a href="/admin/coupon-management" class="btn btn-danger w-100 mb-2">Coupons</a>
+  <a href="/admin/category-management" class="btn btn-danger w-100 mb-2">Category</a>
+    <a href="/admin/offer-management" class="btn btn-danger w-100 mb-2 active">Offers</a>
+
+  <button class="btn w-100 mt-3" id="signout_btn" style="background-color: rgb(225, 227, 230);">
+    Signout
+  </button>
+      </div>
 
     <div class="col-md-9 ms-auto p-4">
       <div class="card shadow-sm border-0 rounded-4 p-4 bg-white">
@@ -14,7 +29,6 @@
         <div class="alert alert-danger">{{errors.global}}</div>
         {{/if}}
 
-        <!-- 🔴 IMPORTANT: novalidate -->
         <form
           action="/admin/offers/edit/{{offer._id}}"
           method="POST"
@@ -183,3 +197,4 @@
 
 <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 <script src="/js/admin/editOffer.js"></script>
+      <script src="/js/sidebar.js"></script>
