--- a/views/admin/editProduct.hbs
+++ b/views/admin/editProduct.hbs
@@ -1,7 +1,23 @@
 <link rel="stylesheet" href="/css/style1.css">
+<link rel="stylesheet" href="/css/profile.css">
+
 <div class="container-fluid">
   <div class="row">
-    {{> adminSidebar}}
+       <div class="col-2 sidebar">
+        <h4 class="mb-4 text-danger">KICKSTYLE</h4>
+  <a href="/admin/dashboard" class="btn btn-danger w-100 mb-2">Dashboard</a>
+  <a href="/admin/order-management" class="btn btn-danger w-100 mb-2">Orders</a>
+  <a href="/admin/product-management" class="btn btn-danger w-100 mb-2 active">Products</a>
+  <a href="/admin/sales-report" class="btn btn-danger w-100 mb-2">Sales Report</a>
+  <a href="/admin/user-management" class="btn btn-danger w-100 mb-2">Customers</a>
+  <a href="/admin/coupon-management" class="btn btn-danger w-100 mb-2">Coupons</a>
+  <a href="/admin/category-management" class="btn btn-danger w-100 mb-2">Category</a>
+    <a href="/admin/offer-management" class="btn btn-danger w-100 mb-2">Offers</a>
+
+  <button class="btn w-100 mt-3" id="signout_btn" style="background-color: rgb(225, 227, 230);">
+    Signout
+  </button>
+      </div>
 
     <div class="col-md-9 ms-auto p-4">
       <div class="card shadow-sm border-0 rounded-4 p-4">
@@ -127,3 +143,4 @@
 </div>
 
 <script src="/js/admin/editProduct.js"></script>
+      <script src="/js/sidebar.js"></script>
