--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -20,7 +20,7 @@
         <label class="form-label">Email <span class="text-danger">*</span></label>
         <input type="email" name="email" id="email" class="form-control" placeholder="Enter email" required value="{{email}}">
       </div>
-   <div class="form-group mb-3">
+   <div class="form-group mb-3 position-relative">
         <label class="form-label">Password <span class="text-danger">*</span></label>
         <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" required
          pattern="(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,12}" title="Password must be 8–12 characters long and include at least one letter, one number, and one special character.">
@@ -38,3 +38,22 @@
 </div>
   </div>
 </div>
+
+
+<script>
+  const toggleBtn = document.getElementById("togglePasswordBtn");
+  const passwordInput = document.getElementById("password");
+  const toggleIcon = document.getElementById("togglePasswordIcon");
+
+  toggleBtn.addEventListener("click", () => {
+    if (passwordInput.type === "password") {
+      passwordInput.type = "text";
+      toggleIcon.classList.remove("fa-eye");
+      toggleIcon.classList.add("fa-eye-slash");
+    } else {
+      passwordInput.type = "password";
+      toggleIcon.classList.remove("fa-eye-slash");
+      toggleIcon.classList.add("fa-eye");
+    }
+  });
+</script>
