--- a/views/admin/product_management.hbs
+++ b/views/admin/product_management.hbs
@@ -1,8 +1,25 @@
+<link rel="stylesheet" href="/css/profile.css">
 <div class="container-fluid">
   <div class="row">
 
     <!-- Sidebar -->
-    {{> adminSidebar}}
+   <!-- Sidebar -->
+      <div class="col-2 sidebar">
+        <h4 class="mb-4 text-danger">KICKSTYLE</h4>
+  <a href="/admin/dashboard" class="btn btn-danger w-100 mb-2">Dashboard</a>
+  <a href="/admin/order-management" class="btn btn-danger w-100 mb-2">Orders</a>
+  <a href="/admin/product-management" class="btn btn-danger w-100 mb-2 active">Products</a>
+  <a href="/admin/sales-report" class="btn btn-danger w-100 mb-2">Sales Report</a>
+  <a href="/admin/user-management" class="btn btn-danger w-100 mb-2">Customers</a>
+  <a href="/admin/coupon-management" class="btn btn-danger w-100 mb-2">Coupons</a>
+  <a href="/admin/category-management" class="btn btn-danger w-100 mb-2">Category</a>
+    <a href="/admin/offer-management" class="btn btn-danger w-100 mb-2">Offers</a>
+
+  <button class="btn w-100 mt-3" id="signout_btn" style="background-color: rgb(225, 227, 230);">
+    Signout
+  </button>
+      </div>
+
 
     <div class="col-10 p-4">
 
@@ -204,3 +221,4 @@ function handleSearch(event) {
 }
 </script>
 <script src="/js/admin/productManagement.js"></script>
+      <script src="/js/sidebar.js"></script>
