--- a/views/admin/user_management.hbs
+++ b/views/admin/user_management.hbs
@@ -1,16 +1,28 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<style>
-  .sidebar .btn {
-    height: 35px;
-    color: black !important;
-  }
-</style>
+<link rel="stylesheet" href="/css/profile.css">
+
 
 <div class="container-fluid">
     <div class="row">
       
-     {{> adminSidebar}}
+    <!-- Sidebar -->
+      <div class="col-2 sidebar">
+        <h4 class="mb-4 text-danger">KICKSTYLE</h4>
+  <a href="/admin/dashboard" class="btn btn-danger w-100 mb-2">Dashboard</a>
+  <a href="/admin/order-management" class="btn btn-danger w-100 mb-2">Orders</a>
+  <a href="/admin/product-management" class="btn btn-danger w-100 mb-2">Products</a>
+  <a href="/admin/sales-report" class="btn btn-danger w-100 mb-2">Sales Report</a>
+  <a href="/admin/user-management" class="btn btn-danger w-100 mb-2 active">Customers</a>
+  <a href="/admin/coupon-management" class="btn btn-danger w-100 mb-2">Coupons</a>
+  <a href="/admin/category-management" class="btn btn-danger w-100 mb-2">Category</a>
+    <a href="/admin/offer-management" class="btn btn-danger w-100 mb-2">Offers</a>
+
+  <button class="btn w-100 mt-3" id="signout_btn" style="background-color: rgb(225, 227, 230);">
+    Signout
+  </button>
+      </div>
+
           <div class="col-10 p-4">
         <h3 style="font-weight: 600;">User Management</h3>
         <hr style="height: 6px">
@@ -71,3 +83,4 @@
   </nav>
 </div>
 <script src="/js/admin/userManagement.js"></script>
+      <script src="/js/sidebar.js"></script>
