--- a/views/user/editProfile.hbs
+++ b/views/user/editProfile.hbs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/profile.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 
@@ -34,27 +35,26 @@
         <form id="editProfileForm" action="/profile/edit-profile" method="POST" enctype="multipart/form-data">
 
           <!-- PROFILE IMAGE -->
-          <div class="text-center mb-4">
-            {{#if user.image}}
-              <img 
-               id="profilePreview"
-                src="{{user.image}}" 
-                alt="Profile Image" 
-                class="rounded-circle border" 
-                width="120" 
-                height="120"
-                style="object-fit: cover;"
-              >
-            {{else}}
-              <div 
-              id="profileIcon"  
-                class="rounded-circle border d-flex align-items-center justify-content-center bg-light"
-                style="width: 120px; height: 120px;"
-              >
-                <i class="fa fa-user fa-3x text-secondary"></i>
-              </div>
-            {{/if}}
-          </div>
+<!-- PROFILE IMAGE -->
+<div class="text-center mb-4">
+  <div class="profile-avatar mx-auto">
+
+    <img
+      id="profilePreview"
+      src="{{user.image}}"
+      class="{{#unless user.image}}d-none{{/unless}}"
+      alt="Profile"
+    >
+
+    <i
+      id="profileIcon"
+      class="fa fa-user {{#if user.image}}d-none{{/if}}"
+    ></i>
+
+  </div>
+</div>
+
+
 
           <!-- File Input -->
           <div class="mt-2 text-center">
@@ -232,3 +232,30 @@
 <script src="/js/user/profile.js"></script>
 <script src="/js/user/edit_profile.js"></script>
 <script src="/js/user/profile_crop.js"></script>
+<style>
+  .profile-avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+  background: #f8f9fa;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  overflow: hidden;
+}
+
+.profile-avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profile-avatar i {
+  font-size: 48px;
+  color: #adb5bd;
+}
+
+</style>
