--- a/views/user/homePage.hbs
+++ b/views/user/homePage.hbs
@@ -4,45 +4,56 @@
     <img src="/images/banner.png" alt="Nike Banner" class="img-fluid w-100">
   </div>
 
-  <!-- Categories Section -->
-  <div class="container my-5">
-    <h4 class="mb-4">Categories</h4>
-    <div class="row text-center">
-      <div class="col-6 col-md-3 mb-4">
+
+<!-- Categories Section -->
+<div class="container my-5">
+  <h4 class="mb-4">Categories</h4>
+  <div class="row text-center">
+    <div class="col-6 col-md-3 mb-4">
+      <a href="/products/men" class="text-decoration-none text-dark">
         <div class="card border-0">
           <img src="/images/category/men.png" class="card-img-top" alt="Men">
           <div class="card-body p-2">
             <h6>Men</h6>
           </div>
         </div>
-      </div>
-      <div class="col-6 col-md-3 mb-4">
+      </a>
+    </div>
+
+    <div class="col-6 col-md-3 mb-4">
+      <a href="/products/women" class="text-decoration-none text-dark">
         <div class="card border-0">
           <img src="/images/category/women.png" class="card-img-top" alt="Women">
           <div class="card-body p-2">
             <h6>Women</h6>
           </div>
         </div>
-      </div>
-      <div class="col-6 col-md-3 mb-4">
+      </a>
+    </div>
+
+    <div class="col-6 col-md-3 mb-4">
+      <a href="/products/kids" class="text-decoration-none text-dark">
         <div class="card border-0">
           <img src="/images/category/kids.png" class="card-img-top" alt="Kids">
           <div class="card-body p-2">
             <h6>Kids</h6>
           </div>
         </div>
-      </div>
-      <div class="col-6 col-md-3 mb-4">
+      </a>
+    </div>
+
+    <div class="col-6 col-md-3 mb-4">
+      <a href="/products/sports" class="text-decoration-none text-dark">
         <div class="card border-0">
           <img src="/images/category/sports.png" class="card-img-top" alt="Sports">
           <div class="card-body p-2">
             <h6>Sports</h6>
           </div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
-
+</div>
   <!-- Featured Products Section -->
   <div class="container my-5">
     <h4 class="mb-4">Featured Products</h4>
@@ -76,4 +87,4 @@
   </a>
 </div>
 
-<script src="/js/user/wishlist.js"></script>
+  <script src="/js/user/wishlist.js"></script>
