--- a/views/user/wishlist.hbs
+++ b/views/user/wishlist.hbs
@@ -73,7 +73,7 @@
           {{else}}
             <div class="text-center p-4">
               <p class="text-muted mb-0">Your wishlist is empty.</p>
-              <a href="/" class="btn btn-primary mt-3">Start Shopping</a>
+              <a href="/" class="btn btn-primary mt-3"style="background:#de8024; border: none;">Start Shopping</a>
             </div>
           {{/if}}
         </div>
