--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="/images/logo.jpg" alt="KickStyle" height="35">
+        <img src="public/images/logo.jpg" alt="KickStyle" height="35">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
   <div class="container">
     <!-- Logo -->
     <a class="navbar-brand" href="/admin/dashboard">
-      <img src="/images/logo.jpg" alt="KickStyle Admin" height="35">
+      <img src="public/images/logo.jpg" alt="KickStyle Admin" height="35">
     </a>
 
     <!-- Logout button on the right -->
